平面地图提示样式区分。但从地图点击泰国工业园区后可能导致卡死，待测

--- a/src/main/webapp/static/css/flatMapAutoTip.css
+++ b/src/main/webapp/static/css/flatMapAutoTip.css
@@ -91,6 +91,14 @@ body{
     background: url(../../static/img/flatMapToLabArrow.png);
     background-size: 100% 100%;
 }
+.echart_tip.noCenterData > .echart_content > .textBox > h4 {
+    margin-top: 2em;
+}
+.echart_tip.noCenterData > .echart_content > .textBox > a{
+    display: none;
+}
+
+
 .echart_tip.bottom >.echart_content {
     bottom: -3.4em;
 }
