--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -1,3 +1,4 @@
+
 #content {
 	background:url("../images/page2/bg-2.jpg") no-repeat 100% 100%;
 	background-size: 100% 100%;
@@ -51,6 +52,18 @@
 	height:100%;
 	margin-left:1.5%;
 	/*background: #dd0;*/
+	position:relative;
+}
+.map-mod .mapTitle {
+	position:absolute;
+	left:35%;top:10%;
+	z-index:10000;
+}
+.mapTitle a {
+	display:block;
+	width:100%;height:100%;
+	color:#64ccff;
+	font-size:1.4em;
 }
 
 .bxbox {
@@ -61,12 +74,30 @@
 	position: relative;
 }
 .bxbox .circle {
+	 perspective: 30em;	
+	 transform-style: preserve-3d;
 	position: absolute;
-	width:51%;height:26%;
-	left:0%;top:48%;
-	background:url(../images/status/circle.png) no-repeat 100% 100%;
-	background-size: 100% 100%;
+	width: 45%;
+    height: 51%;
+    left: 3%;
+    top: 37%;
+    transform: rotateX(55deg);
+	/* background:url(../images/status/circle.png) no-repeat 100% 100%; */
+	/* background-size: 100% 100%; */
+	
 }
+/*  #container {
+    position: relative;
+    margin: 2em auto;
+    width: 320px;
+    height: 320px;
+    border: .1em dashed black;
+    transform: rotateX(90deg);
+}
+
+#circleBox {
+    display: block;
+} */
 .bxbox .mybx {
 	position: absolute;
 	left:4%;top:3.5%;
@@ -544,7 +575,7 @@
 /****************************************故障诊断****************************************/
 .gzzdBox {
 	display: none;
-	width: 95%;
+	width: 47%;
 	height:98%;
 	margin-left: 4%;
 	color: #fff;
@@ -554,7 +585,7 @@
 /****************************************故障预测****************************************/
 .gzycBox {
 	display: none;
-	width: 95%;
+	width: 47%;
 	height:98%;
 	margin-left: 4%;
 	color: #fff;
