修改了接入ulab时鼠标形状

--- a/src/main/webapp/static/phm/css/strategy.css
+++ b/src/main/webapp/static/phm/css/strategy.css
@@ -105,6 +105,7 @@ h3{
 	float: left;
 	/*background: #dd0;*/
 	overflow: hidden;
+	cursor:pointer;
 }
 .dataCenter .topdata .it p,.dataCenter .bottomdata .it p{
 	text-align: center;
