实验室的小视频增加拖动功能，但拖动过程占资源，可能会卡。

--- a/src/main/webapp/static/css/labCurve.css
+++ b/src/main/webapp/static/css/labCurve.css
@@ -33,7 +33,9 @@
 .shishi_right > div > iframe {
     height: 100%;
 }
-
+.shishi_right >.item.iframe{
+    position: relative;
+}
 .sheshi_right_top {
     height: 8%;
     width: 100%;
