--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -346,7 +346,7 @@ li:not(.hasChildren).active {
 .monitoring .shishi_right .smallVideoBox{
     position: absolute;
     width: 19.2em;
-    height: 19.5em;
+    height: 12.5em;
     top: -.0em;
     left: 1em;
 }
@@ -357,6 +357,7 @@ li:not(.hasChildren).active {
     cursor: pointer;
     background: rgba(0,0,0,.7);
     box-shadow: 0 0 2em 1em rgba(0,0,0,.6);
+    border: .1em solid #64ccffad;
 }
 .monitoring .shishi_right .smallVideoBox>object{
     box-shadow: 0 0 1.5em 1.2em rgba(0,0,0,.4);
