可以从大平面地图的提示框进入实验室。提示框内的默认图片设置为俄罗斯实验室。修复俄罗斯印度等模拟点击效果不完全的问题。

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -21,7 +21,7 @@
                 <img class="quit" src="${contextPath!}/static/img/labMain/labMain_toTotalStatus.png"></a>
         </span>
     </div>
-    <a id="toPhm" href="${contextPath!}/data/service" style="border: 1px solid transparent;
+    <a id="toPhm" href="${contextPath!}/phm/index" style="border: 1px solid transparent;
                         display: block;
                         width: 3em;
                         height: 19em;
