--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -506,7 +506,7 @@
 	display: none;
 	width: 50%;
 	height:100%;
-	float: left;
+	/* float: left; */
 }
 .syfxBox .problemBox {
 	width:48%;
@@ -576,7 +576,7 @@
 /****************************************故障诊断****************************************/
 .gzzdBox {
 	display: none;
-	width: 47%;
+	width: 95%;
 	height:98%;
 	margin-left: 4%;
 	color: #fff;
@@ -586,10 +586,32 @@
 /****************************************故障预测****************************************/
 .gzycBox {
 	display: none;
-	width: 47%;
+	width: 95%;
 	height:98%;
 	margin-left: 4%;
-	color: #fff;
-	text-align: center;
 	line-height: 98%;
 }
+.totalInfo {
+	width:100%;
+	height:100%;
+	background:url(../images/status/syfx-border.png) no-repeat;
+	background-size:100% 100%;
+}
+.titleintro {
+    padding-left: 5%;
+    padding-top: 1%;
+}
+.item {
+    font-size: .8em;
+    padding: .5% 2%;
+}
+.items {
+	 padding-top:0;
+}
+.smycBox {
+    width: 98%;
+    height: 78%;
+    margin-left: 1%;
+}
+
+
