--- a/src/main/webapp/static/phm/css/service.css
+++ b/src/main/webapp/static/phm/css/service.css
@@ -133,7 +133,7 @@ table tbody{
 table tbody tr:first-child td {
 	width:1%;
 	overflow: hidden;
-	white-space: nowrap;
+	/* white-space: nowrap; */
 	text-overflow: ellipsis;
 }
 table tr {
@@ -191,9 +191,29 @@ table td {
 	margin-top:1%;
 }
 /*===========right-bar====================*/
+
+.right-mode {
+	float:left;
+	height:98%;
+	width:36%;
+	
+}
+.sbox {
+	width:100%;
+	height:5%;
+}
+.sbox select {
+	width:12%;
+	display:block;
+	margin:0 auto;
+	background:#0f4560;
+	color:#fff;
+	border:0;
+}
+
 .right-bar1,.right-bar2{
 	float:left;
-	width:16%;
+	width:48%;
 	height:82%;
 	margin-top:1%;
 	background:url("../images/page2/gqy.png") no-repeat center;
