--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -190,7 +190,7 @@
                     </div>
                 </div>
             </div>
-            <div class="toLabData"><a href="${contextPath!}/lab/full?toLabData"> 进入实验室 <span>&gt;&gt;</span></a></div>
+            <div class="toLabData"><a href="${contextPath!}/lab/full?toLabData=toLabData"> 进入实验室 <span>&gt;&gt;</span></a></div>
         </div>
     </div>
 </div>
