--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -3,8 +3,12 @@
     <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab2.css">
     <link rel="stylesheet" href="${contextPath!}/static/css/tabs/tab4.css">
 </head>
-
+##if(toLabData=='toLabData'){
+<div id="r" style="display: none;">
+##}else{
 <div id="r" style="">
+##}
+
 
     <!--这里是后面4屏的代码-->
 
