--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -5,8 +5,12 @@
 <link rel="stylesheet" href="../static/css/labOprateState.css">
 <link rel="stylesheet" href="../static/css/labCurve.css">
 <link rel="stylesheet" href="../static/css/centerLab.css">
-
+##if(toLabData=='toLabData'){
+<div class="lab" style="">
+##}else{
 <div class="lab" style="display: none;">
+##}
+
     <!--頂部標題-->
     <div class="lab_head">
         <h2 id="labName_world">中海博睿数据中心</h2>
