--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -263,7 +263,7 @@
                                 <div class="bigVideoBox">
                                     <!--<div id="bigVideo" style="display: none"></div>-->
                                     <div id="bigVideo">
-                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                        <iframe src=""></iframe>
                                     </div>
                                     <div class="loadingAnimation">视频接入中</div>
                                 </div>
@@ -294,10 +294,10 @@
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <!--<div id="smallVideo"></div>-->
                                     <div id="smallVideo">
-                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                        <iframe src=""></iframe>
                                     </div>
                                     <div class="loadingAnimation">视频接入中</div>
-                                    <iframe class="forceVideoJSplaying" src="http://127.0.0.1:10800/play.html?channel=1" style="position: absolute; width: 550px; height: 300px; opacity: 0; z-index: -1;" ></iframe>
+                                    <iframe class="forceVideoJSplaying" src="" style="position: absolute; width: 550px; height: 300px; opacity: 0; z-index: -1;" ></iframe>
                                 </div>
                                 
                             </div>
@@ -306,10 +306,10 @@
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
                                     <div id="smallVideoWeb">
-                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                        <iframe src=""></iframe>
                                     </div>
                                     <div class="loadingAnimation">视频接入中</div>
-                                    <iframe class="forceVideoJSplaying" src="http://127.0.0.1:10800/play.html?channel=1" style="position: absolute; width: 550px; height: 300px; opacity: 0; z-index: 1;" ></iframe>
+                                    <iframe class="forceVideoJSplaying" src="" style="position: absolute; width: 550px; height: 300px; opacity: 0; z-index: 1;" ></iframe>
                                 </div>
                                 <iframe id="lab_iframe_video" src=""></iframe>
                             </div>
