修改若干问题

--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="">整机订单汇总</a></li>
                     <li class="active"><a href="">订单视图查看</a></li>
-                    <li><a href="">整机订单修改要求</a></li>
+                    <li><a href="">整机订单要求修改</a></li>
                     <li><a href="">整机订单查看</a></li>
                 </ul>
             </li>
