修改地图按钮图标，ulab、PHM和首页之间的跳转

--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -1,7 +1,7 @@
      <div id="l" class="l left3x3">
         <header>
             <span class="mainLogo"></span>
-            <h1>全球实验室数据中心</h1>
+            <h1><a href="${contextPath!}/phm">全球实验室数据中心</a></h1>
             <h1>Haier U-lab Data Center</h1>
         </header>
         <div class="btnGroup">
