--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -4,7 +4,7 @@
     </script>
     <header>
         <span class="mainLogo"></span>
-        <h1>全球实验室数据中心</h1>
+        <h1><a href="${contextPath!}/phm">全球实验室数据中心</a></h1>
         <h1>Haier U-lab Data Center</h1>
     </header>
     <div class="btnGroup">
