--- a/src/main/webapp/static/phm/css/health.css
+++ b/src/main/webapp/static/phm/css/health.css
@@ -39,6 +39,10 @@
 	margin-left:1%;
 	letter-spacing: 0.3em;
 }
+#head h2 a{
+	color:#6cf;
+}
+
 /*=============================center==============================*/
 @font-face {
 	font-family:"DS-DIGIB";
