--- a/src/main/webapp/static/phm/css/service.css
+++ b/src/main/webapp/static/phm/css/service.css
@@ -40,6 +40,10 @@
 	margin-left:1%;
 	letter-spacing: 0.3em;
 }
+#head h2 a{
+	color:#6cf;
+}
+
 /*=============================bottom==============================*/
 #bottom{
 	height:76.5%;
