√覆盖专业能力x轴改为非线性 √_从三个圈跳转到ulab时不要片头动画 √_打开中海博睿后默认显示运行状态标签页

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -13,7 +13,7 @@
 
     <!--頂部標題-->
     <div class="lab_head">
-        <h2 id="labName_world">中海博睿数据中心</h2>
+        <h2 id="labName_world">检测中心数据中心</h2>
         <div class="btn-totalStatus">
             <div class="icon"></div>
             <span>返回总状态</span>
