--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -37,7 +37,7 @@
 	font-weight: 900;
 	font-size: 2.2em;
 	margin-top:1.1%;
-	margin-left:1%;
+	margin-left:2%;
 	letter-spacing: 0.3em;
 }
 #head h2 a{
@@ -61,6 +61,7 @@
 	position:absolute;
 	left:35%;top:10%;
 	z-index:10000;
+	font-size:1.4em;
 }
 .mapTitle a {
 	display:block;
@@ -277,6 +278,7 @@
 }
 .txt2 {
 	font-weight: 100;
+	color:#64ccff;
 }
 .infobox {
 	margin-bottom:5%;
@@ -512,7 +514,7 @@
 	/* float: left; */
 }
 .syfxBox .problemBox {
-	width:48%;
+	width:30%;
 	height:46%;
 	margin: 0 1% 1%;
 	float:left;
