--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -126,11 +126,22 @@
                         <div class="chartBorder">
                             <h3>产品生命周期全流程测试</h3>
                             <div class="myChart"></div>
-                            <div class="added" style="padding-left: 6%"><span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
+                            <!--
+                                                        <div class="added" style="padding-left: 6%">
+                                                            <span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
+                                                            <br>
+                                                            <span>c：P3新品确认</span>&emsp;<span>d,e：P4小批验证 入厂/出厂</span>
+                                                            <span>f,g：P5年度型检 监督抽测</span>
+                                                        </div>
+                            -->
+<!--
+                            <div class="added" style="padding-left: 6%;margin-top: 1em;">
+                                <span>P1对比试验</span>&emsp;<span>P2新品调试</span>&emsp;<span>P3新品确认</span>
                                 <br>
-                                <span>c：P3新品确认</span>&emsp;<span>d,e：P4小批验证 入厂/出厂</span>
-                                <span>f,g：P5年度型检 监督抽测</span>
+                                <span>P4小批验证 入厂/出厂</span>&emsp;<span>P5年度型检 监督抽测</span>
+
                             </div>
+-->
                         </div>
                     </div>
                 </div>
