--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -111,10 +111,23 @@
                             <div class="chartBorder">
                                 <h3>产品生命周期全流程测试</h3>
                                 <div class="myChart"></div>
-                                <div class="added"><span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
+<!--
+                                <div class="added">
+                                    <span>a：P1对比试验</span>&emsp;<span>b：P2新品调试</span>
                                     <br>
                                     <span>c：P3新品确认</span>&emsp;<span>d,e：P4小批验证 入厂/出厂</span>
-                                    <span>f,g：P5年度型检 监督抽测</span></div>
+                                    <span>f,g：P5年度型检 监督抽测</span>
+                                </div>
+-->
+<!--
+                                <div class="added" style="padding-left: 6%">
+                                    <span>P1对比试验</span>&emsp;<span>P2新品调试</span>
+                                    <br>
+                                    <span>P3新品确认</span>&emsp;<span>P4小批验证 入厂/出厂</span>
+                                    <br>
+                                    <span>P5年度型检 监督抽测</span>
+                                </div>
+-->
                             </div>
                         </div>
                     </div>
