--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab2.html
@@ -13,7 +13,7 @@
                 <div class="box_title">设备状态</div>
                 <div class="yunying_left_top">
                     <div class="rate">
-                        <div class="title">设备在线率</div>
+                        <div class="title">实验室在线率</div>
                         <div class="title">设备完好率</div>
                         <div class="title">设备负荷率</div>
                     </div>
