--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -6,7 +6,7 @@
 ##if(toLabData=='toLabData'){
 <div id="r" style="display: none;">
 ##}else{
-<div id="r" style="">
+<div id="r" style="display: none;">
 ##}
 
 
