--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -7,87 +7,267 @@
 <div id="cover" style="display: flex;">
     <header class="cover-head">
         <h2><span class="bg"></span><span class="text"> 全球实验室运营状态实时监控</span><span class="bg"></span></h2>
-<!--
-        <div class="btn-totalStatus">
-            <div class="icon"></div>
-            <span>返回总状态</span>
-        </div>
--->
     </header>
-    <section class="content">
-        <div class="top">
-            <div class="top-1">
-                <div class="box">
-                    <h4>实验室在线率</h4>
-                    <div class="number">97.5%
-                        <div class="level best">
-                            <span class="circle"></span>
-                            <span class="text">优</span>
+    <div class="switchBox">
+        <div class="statusCover">
+            <div class="top">
+                <div class="top-1">
+                    <div class="box">
+                        <h4>实验室在线率</h4>
+                        <div class="number">97.5%
+                            <div class="level best">
+                                <span class="circle"></span>
+                                <span class="text">优</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="top-2">
+                    <div class="box">
+                        <h4>设备完好率</h4>
+                        <div class="number">95.5%
+                            <div class="level good">
+                                <span class="circle"></span>
+                                <span class="text">良</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="top-3">
+                    <div class="box">
+                        <h4>设备在线率</h4>
+                        <div class="number">92.5%
+                            <div class="level bad">
+                                <span class="circle"></span>
+                                <span class="text">差</span>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="top-2">
-                <div class="box">
-                    <h4>设备完好率</h4>
-                    <div class="number">95.5%
-                        <div class="level good">
-                            <span class="circle"></span>
-                            <span class="text">良</span>
+            <div class="bottom">
+                <div class="bottom-1">
+                    <div class="box">
+                        <h4>实验室在线率</h4>
+                        <div class="number">35432
+                            <div class="level best">
+                                <span class="circle"></span>
+                                <span class="text">优</span>
+                            </div>
+                        </div>
+                        <div class="YoY up">同比：
+                            <span class="value">235</span>单
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="top-3">
-                <div class="box">
-                    <h4>设备在线率</h4>
-                    <div class="number">92.5%
-                        <div class="level bad">
-                            <span class="circle"></span>
-                            <span class="text">差</span>
+                <div class="bottom-2">
+                    <div class="box">
+                        <h4>订单及时率</h4>
+                        <div class="number">97.2%
+                            <div class="level best">
+                                <span class="circle"></span>
+                                <span class="text">优</span>
+                            </div>
+                        </div>
+                        <div class="YoY down">同比：
+                            <span class="value">2</span>%
+                        </div>
+                    </div>
+                </div>
+                <div class="bottom-3">
+                    <div class="box">
+                        <h4>设备在线率</h4>
+                        <div class="number">92.5%
+                            <div class="level best">
+                                <span class="circle"></span>
+                                <span class="text">优</span>
+                            </div>
+                        </div>
+                        <div class="YoY up">同比：
+                            <span class="value">235</span>单
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="bottom">
-            <div class="bottom-1">
-                <div class="box">
-                    <h4>实验室在线率</h4>
-                    <div class="number">97.5%
-                        <div class="level best">
-                            <span class="circle"></span>
-                            <span class="text">优</span>
-                        </div>
-                    </div>
+        <div class="deviceLoad" style="display: none;">
+            <span class="btn-back">
+                <span class="icon"></span>
+                <!--<span>返回总状态</span>-->
+            </span>
+            <div class="deviceLoad-l">
+                <div class="viewAll">
+                    <h4>设备负荷率</h4>
+                    <table>
+                        <tbody>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY down">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY down">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <div class="bottom-2">
-                <div class="box">
-                    <h4>设备完好率</h4>
-                    <div class="number">95.5%
-                        <div class="level good">
-                            <span class="circle"></span>
-                            <span class="text">良</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="bottom-3">
-                <div class="box">
-                    <h4>设备在线率</h4>
-                    <div class="number">92.5%
-                        <div class="level bad">
-                            <span class="circle"></span>
-                            <span class="text">差</span>
-                        </div>
-                    </div>
+            <div class="deviceLoad-r">
+                <div class="detail">
+                    <h4>负荷率低于80%的设备明细</h4>
+                    <table>
+                        <tr>
+                            <th>产线或平台</th>
+                            <th>实验室类型</th>
+                            <th>实验室设备名称</th>
+                            <th>当月负荷率</th>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                        <tr>
+                            <td class="line">冰冷</td>
+                            <td class="type">整机</td>
+                            <td class="name">贵州冰箱噪音室</td>
+                            <td class="value">60%</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
 </div>
 <script src="${contextPath!}/static/js/cover.js"></script>
 <script>
+    var htmlSetViewAll = "";
+    $(function () {
+        var debug = true;
+        if (debug) {
+            var deviceLoadArr = [
+                {name: "检测中心"},
+                {name: "冰冷产线"},
+                {name: "检测中心3"},
+                {name: "检测中心4"},
+                {name: "检测中心5"},
+                {name: "检测中心6"},
+                {name: "检测中心7"},
+                {name: "检测中心8"}
+            ];
+            for (var i = 0; i < 8; i++) {
+                deviceLoadArr[i].value = (Math.random() * 10 + 90).toFixed(1) + "%";
+                deviceLoadArr[i].YoY = (Math.random() + 1).toFixed(1) + "%";
+                deviceLoadArr[i].sign = Math.random() - 0.5;
+            }
+            console.log("-----------", deviceLoadArr)
+        }
 
+        //设置设备负荷率
+        setViewAll(deviceLoadArr);
+        var $cover = $("#cover");
+        $cover.find(".top-3").click(function () {
+            $(".deviceLoad").show().siblings().hide();
+            loadData(htmlSetViewAll);
+        });
+        $cover.find(".deviceLoad>.btn-back").click(function () {
+            $(".statusCover").show().siblings().hide()
+        });
+
+
+    });
+
+    function setViewAll(deviceLoadArr) {
+
+        deviceLoadArr.forEach(function (item, index, array) {
+            var sign = Number(item.sign) > 0 ? "up" : "down";
+            htmlSetViewAll += '<tr><td class="name">'
+            + item.name + '</td><td class="barBox"><span class="bar"><span class="fill"></span></span></td><td class="value">'
+            + item.value + '</td><td class="YoY '
+
+            +sign+ '">同比：<span>'
+            + item.YoY + '</span></td> </tr>\n'
+        });
+        loadData(htmlSetViewAll);
+
+    }
+
+    function loadData(html) {
+        $(".viewAll").find("tbody").html(html)
+            .find(".fill").css("width", function () {
+            return $(this).parent().parent().next().text();
+        });
+    }
 </script>
