修复tab不能点的bug

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -60,6 +60,116 @@
                     </div>
                 </div>
                 <!--运营状态-->
+<!--
+                <div class="item status">
+                    <div class="labMain_cb_left">
+                        <div class="pageBtn">
+                            <span class="icon" onclick="prePage()"></span>
+                            <span class="icon" onclick="nextPage()"></span>
+                        </div>
+
+                        <div class="leftContent">
+                            &lt;!&ndash;第一行&ndash;&gt;
+                            <div class="l-top">
+                                <div class="l-top-title">
+                                    <h3>实验室状态</h3>
+                                </div>
+                                <div class="l-top-header">
+                                    <div class="item1">
+                                        <h5>实验室总数：</h5>
+                                        <span class="data" id="lab_center_id_left_0">0</span>
+                                    </div>
+                                    <div class="item2" id="lab_center_id_left_1">
+                                        <h5>负荷率最低：</h5>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100" style="width: 80%;height: 100%"></div>
+                                        </div>
+                                        <span class="data">80%</span>
+                                    </div>
+                                    <div class="item3" id="lab_center_id_left_2">
+                                        <h5>负荷率最高：</h5>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100" style="width: 90%;height: 100%"></div>
+                                        </div>
+                                        <span class="data">90%</span>
+                                    </div>
+                                    <div class="item4" id="lab_center_id_left_3">
+                                        <h5>平均负荷率：</h5>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="85"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100" style="width: 85%;height: 100%"></div>
+                                        </div>
+                                        <span class="data">85%</span>
+                                    </div>
+                                </div>
+
+                                <div class="l-top-body" id="center_lab_top_div">
+                                </div>
+                            </div>
+                            &lt;!&ndash;第二行&ndash;&gt;
+                            <div class="l-mid">
+                                <div class="l-mid-title">
+                                    <h3>设备状态</h3>
+                                </div>
+                                <div class="l-mid-header">
+                                    <div class="item1">
+                                        <h5>设备总数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_4">0</span>
+                                    </div>
+                                    <div class="item2">
+                                        <h5>当年故障数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_6"></span>
+                                    </div>
+                                    <div class="item3">
+                                        <h5>当前完好数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_5"></span>
+                                    </div>
+                                    <div class="item4" id="lab_center_id_left_7">
+                                        <h5>当前完好率：<span></span></h5>
+                                        <div class="progress">
+                                            <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                                                 aria-valuemin="0"
+                                                 aria-valuemax="100" style="width: 98%;height: 100%"></div>
+                                        </div>
+                                        <span class="data">98%</span>
+                                    </div>
+                                </div>
+                                <div class="l-mid-body" id="center_lab_center_div">
+                                </div>
+
+                            </div>
+                            &lt;!&ndash;第三行&ndash;&gt;
+                            <div class="l-bottom">
+                                <div class="l-bottom-title">
+                                    <h3>订单状态</h3>
+                                </div>
+                                <div class="l-bottom-header">
+                                    <div class="item1">
+                                        <h5>已测订单数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_8"></span>
+                                    </div>
+                                    <div class="item1">
+                                        <h5>在测订单数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_9"></span>
+                                    </div>
+                                    <div class="item1">
+                                        <h5>待测订单数：<span></span></h5>
+                                        <span class="data" id="lab_center_id_left_10"></span>
+                                    </div>
+                                    &lt;!&ndash;<div class="item1"></div>&ndash;&gt;
+                                </div>
+                                <div class="l-bottom-body" id="center_lab_bottom_div">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+-->
                 <div class="item status">
                     <div class="labMain_cb_left">
                         <div class="pageBtn">
