--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -67,7 +67,7 @@
             // 3. 获取到当前菜单的索引号
             var index = $(this).index();
             // 4. 通过索引号对应关系 让这个索引号对应的内容展示出来
-            $(".box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
+            $("#r .box:eq(" + index + ")").addClass("selected").siblings().removeClass("selected");
             // console.log("下右侧面开始图表重置");
             resetSizeRight();
         });
