--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -14,7 +14,7 @@
                 <div class="top-1">
                     <div class="box">
                         <h4>实验室在线率</h4>
-                        <div class="number">97.5%
+                        <div class="number"><span class='value'></span>
                             <div class="level best">
                                 <span class="circle"></span>
                                 <span class="text">优</span>
@@ -25,7 +25,7 @@
                 <div class="top-2">
                     <div class="box">
                         <h4>设备完好率</h4>
-                        <div class="number">95.5%
+                        <div class="number"><span class='value'></span>
                             <div class="level good">
                                 <span class="circle"></span>
                                 <span class="text">良</span>
@@ -35,8 +35,8 @@
                 </div>
                 <div class="top-3">
                     <div class="box">
-                        <h4>设备在线率</h4>
-                        <div class="number">92.5%
+                        <h4>设备负荷率</h4>
+                        <div class="number"><span class='value'></span>
                             <div class="level bad">
                                 <span class="circle"></span>
                                 <span class="text">差</span>
@@ -48,7 +48,7 @@
             <div class="bottom">
                 <div class="bottom-1">
                     <div class="box">
-                        <h4>实验室在线率</h4>
+                        <h4>在线检测订单量</h4>
                         <div class="number">35432
                             <div class="level best">
                                 <span class="circle"></span>
@@ -56,35 +56,35 @@
                             </div>
                         </div>
                         <div class="YoY up">同比：
-                            <span class="value">235</span>单
+                            <span class="value">235</span>%
                         </div>
                     </div>
                 </div>
                 <div class="bottom-2">
                     <div class="box">
                         <h4>订单及时率</h4>
-                        <div class="number">97.2%
+                        <div class="number"><span class='value'></span>
                             <div class="level best">
                                 <span class="circle"></span>
                                 <span class="text">优</span>
                             </div>
                         </div>
-                        <div class="YoY down">同比：
-                            <span class="value">2</span>%
+                        <div class="YoY">同比：
+                            <span class="value"></span>%
                         </div>
                     </div>
                 </div>
                 <div class="bottom-3">
                     <div class="box">
-                        <h4>设备在线率</h4>
-                        <div class="number">92.5%
+                        <h4>问题闭环率</h4>
+                        <div class="number"><span class='value'></span>
                             <div class="level best">
                                 <span class="circle"></span>
                                 <span class="text">优</span>
                             </div>
                         </div>
-                        <div class="YoY up">同比：
-                            <span class="value">235</span>单
+                        <div class="YoY">同比：
+                            <span class="value"></span>%
                         </div>
                     </div>
                 </div>
