负荷率低于80%的设备明细列表的滚动

--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -148,6 +148,12 @@
                             <td class="value">95.2%</td>
                             <td class="YoY up">同比：<span>1.3%</span></td>
                         </tr>
+                        <tr>
+                            <td class="name">检测中心</td>
+                            <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
+                            <td class="value">95.2%</td>
+                            <td class="YoY up">同比：<span>1.3%</span></td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
@@ -162,13 +168,60 @@
                             <th>实验室设备名称</th>
                             <th>当月负荷率</th>
                         </tr>
-                        <tr>
-                            <td class="name">冰冷</td>
-                            <td class="type">整机</td>
-                            <td class="deviceName">贵州冰箱噪音室</td>
-                            <td class="value">60%</td>
-                        </tr>
                     </table>
+                    <div class="scrollBoard">
+                        <table>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                            <tr>
+                                <td class="name">冰冷</td>
+                                <td class="type">整机</td>
+                                <td class="deviceName">贵州冰箱噪音室</td>
+                                <td class="value">60%</td>
+                            </tr>
+                        </table>
+                    </div>
+
                 </div>
             </div>
         </div>
